Fix table sorting and add duration column sorting
- Extract applySorting() helper function
- Apply sorting after filtering jobs
- Add duration as sortable column
- Calculate duration from completedon - startedon
- Handle null durations (incomplete jobs)
- Sorting now works correctly on filtered results

--- a/public/index.html
+++ b/public/index.html
@@ -253,7 +253,9 @@
                                 <th class="sortable" onclick="sortJobs('createdon')">
                                     Created <span class="sort-indicator" data-column="createdon"></span>
                                 </th>
-                                <th>Duration</th>
+                                <th class="sortable" onclick="sortJobs('duration')">
+                                    Duration <span class="sort-indicator" data-column="duration"></span>
+                                </th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
