Add option to clear active jobs in clear queue modal
- Add 'Clear Active Jobs' radio option
- Deletes only jobs in 'active' state
- Enhanced confirmation message warns about removing processing jobs
- Backend API handles 'active' clearType
- Three options now: pending, active, or all

--- a/public/index.html
+++ b/public/index.html
@@ -331,6 +331,13 @@
                         </div>
                     </label>
                     <label class="radio-option">
+                        <input type="radio" name="clearType" value="active" />
+                        <div>
+                            <strong>Clear Active Jobs</strong>
+                            <div style="font-size: 12px; color: var(--text-muted);">Delete only 'active' jobs (currently processing)</div>
+                        </div>
+                    </label>
+                    <label class="radio-option">
                         <input type="radio" name="clearType" value="all" />
                         <div>
                             <strong>Clear All Jobs</strong>
