Add bulk job operations

--- a/public/index.html
+++ b/public/index.html
@@ -175,13 +175,7 @@
                         <div class="section-header">
                             <h2>Jobs</h2>
                             <div class="job-actions">
-                                <button id="bulkSelectBtn" class="secondary-btn" title="Select Multiple">
-                                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                                        <rect x="3" y="3" width="18" height="18" rx="2"/><polyline points="9 11 12 14 22 4"/>
-                                    </svg>
-                                    Select
-                                </button>
-                                <button id="bulkCancelBtn" class="danger-btn" style="display: none;">Cancel Selected</button>
+                                <button id="bulkActionsBtn" class="primary-btn" style="display: none;">Bulk Actions</button>
                                 <button id="exportBtn" class="secondary-btn">
                                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                                         <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3"/>
@@ -310,8 +304,9 @@
             <div class="modal-body">
                 <p>Selected <span id="selectedCount">0</span> jobs</p>
                 <div class="bulk-actions">
-                    <button class="danger-btn" onclick="bulkCancel()">Cancel All</button>
-                    <button class="primary-btn" onclick="bulkRetry()">Retry All</button>
+                    <button class="primary-btn" onclick="bulkRetry()">Retry Selected</button>
+                    <button class="secondary-btn" onclick="bulkCancel()">Cancel Selected</button>
+                    <button class="danger-btn" onclick="bulkDelete()">Delete Selected</button>
                 </div>
             </div>
         </div>
